<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ReportFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_dp"
        android:hint="@string/eshterak_search">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:layout_marginStart="90dp"
        android:layout_marginTop="@dimen/medium_dp"
        android:layout_marginEnd="@dimen/small_dp"
        android:layout_marginBottom="@dimen/small_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_eshterak"
            style="@style/UsersPointsTextView"
            android:text="@string/date" />

        <TextView
            android:id="@+id/text_view_date"
            style="@style/UsersPointsTextView"
            android:text="@string/eshterak" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_layout_title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_users_points"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/users_points_item" />
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/not_found_record"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:visibility="gone" />
</RelativeLayout>