<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_dp"
    tools:context=".fragments.ExportFragment">

    <ImageView
        android:id="@+id/imageViewUpload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear_layout_spinner"
        android:src="@drawable/img_export"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_layout_from"
        android:layout_marginLeft="@dimen/large_dp"
        android:layout_marginRight="@dimen/large_dp"
        android:layout_marginBottom="@dimen/low_dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/low_dp"
            android:text="@string/export_format"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            style="@style/Spinner"
            android:padding="@dimen/low_dp"
            tools:listitem="@layout/item_dropdown_menu" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_layout_end"
        android:layout_marginLeft="@dimen/large_dp"
        android:layout_marginRight="@dimen/large_dp"
        android:layout_marginBottom="@dimen/low_dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/low_dp"
            android:text="@string/from"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_start"
            style="@style/InputPlace"
            android:maxLength="10"
            android:padding="@dimen/low_dp"
            android:textSize="@dimen/text_size_large" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_upload"
        android:layout_marginLeft="@dimen/large_dp"
        android:layout_marginRight="@dimen/large_dp"
        android:layout_marginBottom="@dimen/low_dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/low_dp"
            android:text="@string/end"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_end"
            style="@style/InputPlace"
            android:maxLength="10"
            android:padding="@dimen/low_dp"
            android:textSize="@dimen/text_size_large" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/large_dp"
        android:layout_marginRight="@dimen/large_dp"
        android:layout_marginBottom="@dimen/low_dp"
        android:background="@drawable/border_yellow_1"
        android:text="@string/create_export"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

</RelativeLayout>