<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <View
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="?attr/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp"
        android:layout_below="@id/view_top"
        android:background="?attr/colorPrimaryVariant" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_75sdp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/image_view_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/img_profile"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/low_dp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/low_dp"
        android:background="@drawable/border_gray_2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_username"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_user"
            tools:ignore="ContentDescription" />
        <EditText
            android:id="@+id/edit_text_username"
            style="@style/InputGray"
            android:hint="@string/username"
            android:inputType="text"
            android:lines="1"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_username"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/low_dp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/low_dp"
        android:background="@drawable/border_gray_2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_password"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_password"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edit_text_password"
            style="@style/InputGray"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_box_save"
        style="@style/CheckBox"
        android:layout_below="@id/linear_layout_password"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/low_dp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/low_dp"
        android:checked="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/button_login"
        style="@style/ButtonInfo"
        android:layout_below="@id/check_box_save"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:background="@drawable/border"
        android:text="@string/login" />


    <TextView
        android:id="@+id/text_view_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/low_dp"
        android:textColor="@color/text_color_dark" />

</RelativeLayout>